--- a/_posts/2018-10-06-vim-cn-im.md
+++ b/_posts/2018-10-06-vim-cn-im.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Vim 与中文输入法"
+title: "快速一键发币"
 subtitle: 'Using Vim with non-english input method'
 author: "Hux"
 header-style: text
