--- a/_posts/2018-10-06-vim-cn-im.md
+++ b/_posts/2018-10-06-vim-cn-im.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "快速一键发币"
+title: "春天区块链（1）10分钟教你发行区块链资产，最简单的一键发币"
 subtitle: 'Using Vim with non-english input method'
 author: "Hux"
 header-style: text
