--- a/_posts/2019-4-18-vim-cn-im.md
+++ b/_posts/2019-4-18-vim-cn-im.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "春天区块链（1）10分钟教你发行区块链资产，最简单的一键发币"
-subtitle: 'Using Vim with non-english input method'
+subtitle: '用最简单的方式开始你的加密帝国'
 author: "Hux"
 header-style: text
 tags:
