--- a/_posts/2019-4-18-vim-cn-im.md
+++ b/_posts/2019-4-18-vim-cn-im.md
@@ -5,7 +5,11 @@ subtitle: '用最简单的方式开始你的加密帝国'
 author: "Hux"
 header-style: text
 tags:
-  - Vim
+  - 一键发币
+  - MetaMask
+  - 以太坊
+  - 区块链
+  - 加密货币
 ---
 
 Update: 我最后还是放弃在 Vim 模式下输入中文了，mental model 的 cost 太重了（
