--- a/_posts/2019-4-18-vim-cn-im.md
+++ b/_posts/2019-4-18-vim-cn-im.md
@@ -12,7 +12,7 @@ tags:
   - 加密货币
 ---
 
-Update: 我最后还是放弃在 Vim 模式下输入中文了，mental model 的 cost 太重了（
+摘要: 下载以太坊钱包MetaMask,登录一键发币网址https://www.yidaibi.me/,10分钟拥有自己的代币和众筹项目
 
 ---
 
